--- a/views/pages/communaute.ejs
+++ b/views/pages/communaute.ejs
@@ -79,32 +79,7 @@
 
     <div class="container pt-3 mt-2">
         <div class="media-container-row">
-            <div class="mbr-testimonial p-3 align-center col-12 col-md-6 col-lg-4">
-                <div class="panel-item p-3">
-                    <div class="card-block">
-                        <div class="mbr-figure">
-                            <img src="/views/media/images/haitipay.png">
-                        </div>
-                        <p class="mbr-text mbr-fonts-style display-7">Application de Paiement en Ligne</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="mbr-author-name mbr-bold mbr-fonts-style display-7" href="">Visiter</a> 
-                    </div>
-                </div>
-            </div>
-            <div class="mbr-testimonial p-3 align-center col-12 col-md-6 col-lg-4">
-                <div class="panel-item p-3">
-                    <div class="card-block">
-                        <div class="mbr-figure">
-                            <img src="media/images/banj.jpg">
-                        </div>
-                        <p class="mbr-text mbr-fonts-style display-7">Application de Paiement en Ligne</p>
-                    </div>
-                    <div class="card-footer">
-                        <a class="mbr-author-name mbr-bold mbr-fonts-style display-7" href="">Visiter</a> 
-                    </div>
-                </div>
-            </div>
+            
             
             <div class="mbr-testimonial p-3 align-center col-12 col-md-6 col-lg-4">
                 <div class="panel-item p-3">
@@ -112,7 +87,7 @@
                         <div class="mbr-figure">
                             <img src="media/images/devcircle.jpeg">
                         </div>
-                        <p class="mbr-text mbr-fonts-style display-7">Application de Paiement en Ligne</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Groupe Facebook Developer Port-au-Prince</p>
                     </div>
                     <div class="card-footer">
                         <a class="mbr-author-name mbr-bold mbr-fonts-style display-7" href="">Visiter</a> 
@@ -125,7 +100,7 @@
                         <div class="mbr-figure">
                             <img src="media/images/natcom.jpg">
                         </div>
-                        <p class="mbr-text mbr-fonts-style display-7">Application de Paiement en Ligne</p>
+                        <p class="mbr-text mbr-fonts-style display-7"> Compagnie Telephonique</p>
                     </div>
                     <div class="card-footer">
                         <a class="mbr-author-name mbr-bold mbr-fonts-style display-7" href="">Visiter</a> 
