--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -42,7 +42,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-              <li class="nav-item"><a class="nav-link link text-black display-4" href="index">Acceuil</a></li>
+              <li class="nav-item"><a class="nav-link link text-black display-4" href="index">Accueil</a></li>
               <li class="nav-item"><a class="nav-link link text-black display-4" href="service">Services</a></li>
               <li class="nav-item"><a class="nav-link link text-black display-4" href="Publications">Publications</a></li>
               <li class="nav-item"><a class="nav-link link text-black display-4" href="communaute">Communaute</a></li>
