--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -131,23 +131,7 @@ let post1,post2,post3,post4;
 
    
 </section>
-<<<<<<< HEAD
-<div>
-<iframe>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-2680025918775324",
-    enable_page_level_ads: true
-  });
-</script>
-</iframe>
-</div>
-=======
 
-
-
->>>>>>> 50c3af49d1674140ae1c815cac624ac89f0997f8
 
 <div class="media-container-row">
     <div class="col-7 col-md-4 col-lg-3">
@@ -156,6 +140,15 @@ let post1,post2,post3,post4;
 </div>
 
 <section class="mbr-section article content1 cid-rkAO52Wwc7" id="content1-1d">
+        <div class="container">
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-2680025918775324",
+                enable_page_level_ads: true
+            });
+            </script>
+        </div>
     <div class="container">
         <hr>
         <div class="media-container-row">
