--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -129,6 +129,8 @@ let post1,post2,post3,post4;
         </div>
    </div>
 </section>
+<div>
+<iframe>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
@@ -136,7 +138,8 @@ let post1,post2,post3,post4;
     enable_page_level_ads: true
   });
 </script>
-
+</iframe>
+</div>
 
 <div class="media-container-row">
     <div class="col-7 col-md-4 col-lg-3">
