--- a/views/pages/apropos.ejs
+++ b/views/pages/apropos.ejs
@@ -86,8 +86,7 @@
                         border-radius: 100%">
                     </div>
                     <p style="text-align: center">
-                        Formateur en Web Marketing, programmeur backend, CEO at MatiTech
-                    </p>
+                        Formateur en Web Marketing, programmeur backend, CEO                     </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
                     <div class="mbr-author-name mbr-bold mbr-fonts-style display-7">
@@ -124,7 +123,7 @@
                         border-radius: 100%">
                     </div>
                     <p style="text-align: center">
-                        Specialiste en reseau et telecomunication, CEO at MatiTech 
+                        Specialiste en reseau et telecomunication 
                     </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
@@ -161,7 +160,7 @@
                         border-radius: 100%">
                     </div>
                     <p style="text-align: center">
-                        Concepteur de Administrateur de de Base de donne, CEO at Matitech
+                        Concepteur de Administrateur de de Base de donnee
                     </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
@@ -200,7 +199,7 @@
                         border-radius: 100%">
                     </div>
                     <p style="text-align: center">
-                        Public speaker, Journaliste et informaticienne. CEO at MaTiTech
+                        Public speaker, Journaliste et informaticienne
                     </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
@@ -236,7 +235,7 @@
                         border-radius: 100%">
                     </div>
                     <p style="text-align: center">
-                        Programmeur Web fulsctacks, Desinger. CEO at MaTiTech
+                        Programmeur Web fulsctacks, Desinger
                     </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
