--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -41,13 +41,13 @@
                     Formulaire d'Inscription
                 </h2>
                 <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">
-                    S'inscrire a la Newsletter de Matitech
+                    Sonscrire a la Newsletter de Matitech
                 </h3>
                 <hr>
                 <p style ="color: green;
                 font-style: italic;
                 font-weight: Bold;
-                text-align: center;">Visite votre corier electronique pour voir la confirmation de ton inscription</p>
+                text-align: center;">Visite votre courier electronique pour voir la confirmation de Votre Souscription</p>
             </div>
         </div>
 
@@ -97,7 +97,7 @@
                 </h5>
                 <p class="mbr-text">
                     Email: matitech@gmail.com
-                    <br>Phone: +1 (509) 33903721&nbsp;<br>Phone: +1 (509) 33903721
+                    <br>Phone: +(509) 33903721&nbsp;<br>Phone: +(509) 33903721
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -105,7 +105,7 @@
                     Links
                 </h5>
                 <p class="mbr-text">
-                    <a class="text-white" href="/">Aceuil</a>
+                    <a class="text-white" href="./">Accueil </a>
                     <a class="text-white" href="/apropos">CEO</a>
                     <a class="text-white" href="/service">Services</a>
             </div>
