--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -97,7 +97,7 @@
                 </h5>
                 <p class="mbr-text">
                     Email: matitech@gmail.com
-                    <br>Phone: +(509) 33903721&nbsp;<br>Phone: +(509) 33903721
+                    <br>Phone: +(509) 3390-3721&nbsp;<br>Phone: +(509) 4425-0322
                 </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
