--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -52,3 +52,12 @@
         </div>
     </nav>
 </section>
+<div class="container ">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-2680025918775324",
+      enable_page_level_ads: true
+    });
+  </script>
+</div>
